@@ -1350,4 +1350,8 @@ ${set/p var=question}
 		
 	-- Few documentation updates.
 
-	
+{{Wednesday 26th, October 2016}}
+
+	- Rewrite Pushd and Popd commands.
+
+	- Fix some commands help.
